Fix menu spacing, rename minified JS/CSS files

--- a/src/Promenade.Web/Styles/style.css
+++ b/src/Promenade.Web/Styles/style.css
@@ -116,6 +116,7 @@ footer {
     font-size: 0.9rem;
     padding-top: 0.5rem;
     padding-bottom: 0.1rem;
+    padding-right: 0.7rem;
 }
 
     .prom-leftnav .prom-leftnav-content ul {
